--- a/15.1/15.1.csproj
+++ b/15.1/15.1.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FictionBook.cs" />
+    <Compile Include="Library.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TecnicalBook.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
